# MiniRender

./: .clang-format  CMakeLists.txt  README.md  ch0.h  ch1.h  ch2.h  ch3.h  ch4.h  ch5.h  minirender.cpp  minirender.h  tgaimage.cc  tgaimage.h
render-electron/: .gitignore  CMakeLists.txt  binding.gyp  package-lock.json  package.json  vue.config.js
render-electron/public/: preload.js
render-electron/src/: App.vue  background.js
render-electron/src/clib/: hello.cc  hello.js
render-electron/src/components/: Bitmap.vue
src/: CMakeLists.txt  camera.h  geometry.cc  geometry.h  line.cc  line.h  model.cc  model.h  render.cc  render.h  scene.h  shader.cc  shader.h  tgaimage.cc  tgaimage.h  transformations.cc  transformations.h  triangle.cc  triangle.h
